--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -31,4 +31,5 @@
   ></script>
   <script src="/js/formValidate.js"></script>
   <script src="/js/setTimeout.js"></script>
+  <script src="/js/formatUsername.js"></script>
 </html>
