--- a/views/layouts/partials/navbar.ejs
+++ b/views/layouts/partials/navbar.ejs
@@ -41,10 +41,11 @@
             class="dropdown-menu dropdown-menu-dark dropdown-menu-lg-end dropdown-menu-lg-start"
             aria-labelledby="navbarDropdown"
           >
+            <% if(!currentUser) { %>
             <li><a class="dropdown-item" href="/login">Login</a></li>
-            <li><a class="dropdown-item" href="/register">Register</a></li>
-            <% if(currentUser) { %>
             <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" href="/register">Register</a></li>
+            <% } else { %>
             <li>
               <a
                 class="dropdown-item"
