--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -14,7 +14,7 @@
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('partials/navbar') %>
-    <main>
+    <main class="mt-5">
       <%- include('partials/alert') %> <%- body %>
     </main>
     <%- include('partials/footer') %>
