--- a/views/layouts/components/formReview.ejs
+++ b/views/layouts/components/formReview.ejs
@@ -1,3 +1,6 @@
+<h6 class="h5 mb-4 font-monospace text-uppercase text-underline">
+  <u>Leave a Review</u>
+</h6>
 <form
   action="/places/<%= place._id %>/reviews"
   method="POST"
