--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -11,6 +11,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/styles/base.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/styles/starability-fade.min.css"
+    />
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('partials/navbar') %>
@@ -31,5 +36,5 @@
   ></script>
   <script src="/js/formValidate.js"></script>
   <script src="/js/setTimeout.js"></script>
-  <script src="/js/formatUsername.js"></script>
+  <script src="/js/formatUsernameNav.js"></script>
 </html>
