--- a/views/layouts/components/formReview.ejs
+++ b/views/layouts/components/formReview.ejs
@@ -8,16 +8,35 @@
   novalidate
 >
   <div class="mb-3">
-    <label for="rating">Rating (1-5)⭐</label>
-    <input
-      class="form-range"
-      type="range"
-      name="review[rating]"
-      id="rating"
-      min="1"
-      max="5"
-      required
-    />
+    <fieldset class="starability-slot">
+      <p>Rating (1-5)⭐</p>
+      <input
+        type="radio"
+        id="no-rate"
+        class="input-no-rate"
+        name="review[rating]"
+        value="0"
+        checked
+        aria-label="No rating."
+        required
+      />
+      <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+      <label for="first-rate1" title="Terrible">1 star</label>
+      <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+      <label for="first-rate2" title="Not good">2 stars</label>
+      <input
+        type="radio"
+        id="first-rate3"
+        name="review[rating]"
+        value="3"
+        checked
+      />
+      <label for="first-rate3" title="Average">3 stars</label>
+      <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+      <label for="first-rate4" title="Very good">4 stars</label>
+      <input type="radio" id="first-rate5" n name="review[rating]" value="5" />
+      <label for="first-rate5" title="Amazing">5 stars</label>
+    </fieldset>
   </div>
   <div class="mb-3">
     <label for="review" class="mb-2">Review</label>
