--- a/views/places/details.ejs
+++ b/views/places/details.ejs
@@ -2,14 +2,25 @@
 %>
 <div class="container mt-5 mb-5">
   <div class="row pt-5 pb-3">
-    <div class="col-sm-6">
+    <div class="col-sm-12 col-md-6">
+      <!-- Action Button -->
       <div class="d-flex justify-content-between align-items-center">
         <h1>Details Place</h1>
         <% if(currentUser && place.author.equals(currentUser._id)) { %>
         <div class="d-flex gap-2">
           <a href="/places/<%= place._id %>/edit/" class="btn btn-primary"
-            >Edit</a
-          >
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-pencil-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"
+              /></svg
+          ></a>
           <!-- Button trigger modal -->
           <button
             type="button"
@@ -17,7 +28,18 @@
             data-bs-toggle="modal"
             data-bs-target="#exampleModal"
           >
-            Delete
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-trash-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0"
+              />
+            </svg>
           </button>
           <!-- Modal -->
           <div
@@ -64,6 +86,7 @@
         </div>
         <% } %>
       </div>
+      <!-- Content Place -->
       <ul class="my-3 bg-light p-3 rounded">
         <li class="mb-3">
           <span class="fw-bold">Description: </span><%= place.description %>
@@ -82,18 +105,20 @@
         </li>
       </ul>
     </div>
+    <!-- Jika Tidak ada User -->
     <% if(!currentUser) { %>
-    <div class="col-sm-6">
+    <div class="col-sm-12 col-md-6">
       <%- include('../layouts/components/reviews') %>
     </div>
     <% } %>
   </div>
+  <!-- Jika Ada User -->
   <% if(currentUser) { %>
   <div class="row mt-5 border-top pt-5">
-    <div class="col-sm-4">
+    <div class="col-sm-12 col-md-4">
       <%- include('../layouts/components/formReview') %>
     </div>
-    <div class="col-sm-8">
+    <div class="col-sm-12 col-md-8">
       <div class="row">
         <%- include('../layouts/components/reviews') %>
       </div>
