--- a/views/layouts/components/formCreate.ejs
+++ b/views/layouts/components/formCreate.ejs
@@ -3,6 +3,7 @@
   method="post"
   class="validated-form bg-light p-5 rounded"
   novalidate
+  enctype="multipart/form-data"
 >
   <div class="mb-3">
     <label for="title" class="form-label">Title Place</label>
@@ -69,12 +70,14 @@
     </div>
   </div>
   <div class="mb-3">
-    <label for="image" class="form-label">Image Url</label>
+    <label for="image" class="form-label">Image</label>
     <input
-      type="text"
-      name="place[image]"
-      id="image"
+      type="file"
       class="form-control"
+      name="image"
+      id="image"
+      accept="image/*"
+      multiple
       required
     />
     <div class="valid-feedback">
