edit form for img

--- a/views/layouts/components/thumbnailPlace.ejs
+++ b/views/layouts/components/thumbnailPlace.ejs
@@ -6,7 +6,7 @@
     style="background-image: url('/images/<%=image.filename %>');"
   ></div>
   <% }) %> <% } else { %>
-  <p>No images available for this place.</p>
+  <div class="img-fluid img-details"></div>
   <% } %>
   <div class="card-img-overlay d-flex flex-column">
     <nav aria-label="breadcrumb">
