fixing img and seeds

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,9 @@
+.form-img {
+  height: 80px;
+  object-fit: cover;
+  background-position: center;
+}
+
 ul {
   list-style: none;
   margin: 0;
@@ -53,7 +59,7 @@ figure {
 .img-details {
   position: relative;
   width: 100%;
-  height: 450px;
+  height: 95vh;
   object-fit: cover;
   background-attachment: fixed;
   background-position: center;
@@ -133,31 +139,7 @@ figure {
   margin-top: auto;
   width: 120px;
 }
-.img-details {
-  position: relative;
-  width: 100%;
-  height: 450px;
-  object-fit: cover;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.img-details:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-  background: rgb(23, 23, 23);
-  background: linear-gradient(
-    0deg,
-    rgba(23, 23, 23, 1) 5%,
-    rgba(255, 255, 255, 0) 100%
-  );
-}
+
 .nav-back {
   color: white;
   text-decoration: none;
