--- a/views/layouts/components/thumbnailPlace.ejs
+++ b/views/layouts/components/thumbnailPlace.ejs
@@ -16,10 +16,10 @@
         </li>
       </ol>
     </nav>
-    <h2 class="card-title text-center fw-bold" style="margin-top: auto;">
+    <!-- <h2 class="card-title text-center fw-bold" style="margin-top: auto;">
       "<%= place.title %>"
-    </h2>
-    <p class="card-text" style="margin-top: auto;">
+    </h2> -->
+    <p class="card-text mb-3" style="margin-top: auto;">
       📍<%= place.location %>
     </p>
   </div>
