--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -16,6 +16,16 @@
       type="text/css"
       href="/styles/starability-fade.min.css"
     />
+    <script
+      src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
+    <script
+      src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('partials/navbar') %>
@@ -34,6 +44,7 @@
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"
   ></script>
+
   <script src="/js/formValidate.js"></script>
   <script src="/js/setTimeout.js"></script>
   <script src="/js/formatUsernameNav.js"></script>
