--- a/views/places/details.ejs
+++ b/views/places/details.ejs
@@ -89,7 +89,7 @@
         <% } %>
       </div>
       <!-- Content Place -->
-      <ul class="my-3 bg-light p-3 rounded">
+      <ul class="bg-light p-3 rounded mt-1">
         <li class="mb-3">
           <span class="fw-bold">Description: </span><%= place.description %>
         </li>
@@ -107,6 +107,10 @@
         </li>
       </ul>
     </div>
+    <div class="col-sm-12 col-md-6 bg-light p-3 rounded mt-2">
+      <div style="width: 100%; height: 100%;" id="mapContainer"></div>
+    </div>
+
     <!-- Jika Tidak ada User -->
     <% if(!currentUser) { %>
     <div class="col-sm-12 col-md-6">
@@ -114,6 +118,7 @@
     </div>
     <% } %>
   </div>
+
   <!-- Jika Ada User -->
   <% if(currentUser) { %>
   <div class="row mt-5 border-top pt-5">
@@ -128,3 +133,29 @@
   </div>
   <% } %>
 </div>
+<script>
+  const place = <%- JSON.stringify(place) %>;
+  const coordinates ={
+    lng: place.geometry.coordinates[0],
+    lat: place.geometry.coordinates[1],
+  }
+</script>
+<script>
+  // Initialize the platform object
+  const platform = new H.service.Platform({
+    apikey: "hi8gLZMcMERrG5sktsmbI_6RednnuOV6BqqCg4jl2jw",
+  });
+
+  // Obtain the default map types from the platform object
+  const maptypes = platform.createDefaultLayers();
+
+  // Instantiate (and display) the map
+  const map = new H.Map(
+    document.getElementById("mapContainer"),
+    maptypes.vector.normal.map,
+    {
+      zoom: 10,
+      center: coordinates,
+    }
+  );
+</script>
