--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -121,7 +121,7 @@ li {
   transition: all 300ms ease-in-out;
 }
 .card-custom {
-  height: 28rem;
+  height: 30rem;
 }
 .card-body {
   display: flex;
@@ -180,5 +180,34 @@ a {
   to {
     opacity: 0;
     transform: translateX(30px);
+  }
+}
+.bounce2 {
+  animation: bounce2 2s ease infinite;
+}
+@keyframes bounce2 {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.mapContainer {
+  width: 100%;
+  height: 300px;
+}
+@media (min-width: 768px) {
+  .mapContainer {
+    width: 100%;
+    height: 100%;
   }
 }
