--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -26,6 +26,26 @@
       type="text/javascript"
       charset="utf-8"
     ></script>
+    <script
+      src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
+    <script
+      type="text/javascript"
+      charset="utf-8"
+      src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://js.api.here.com/v3/3.1/mapsjs-ui.css"
+    />
+    <script
+      type="text/javascript"
+      charset="utf-8"
+      src="https://js.api.here.com/v3/3.1/mapsjs-clustering.js"
+    ></script>
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('partials/navbar') %>
