--- a/views/places/details.ejs
+++ b/views/places/details.ejs
@@ -2,122 +2,18 @@
 %>
 <div class="container mt-5 mb-5">
   <div class="row pt-5 pb-3">
-    <div class="col-sm-12 col-md-6">
-      <!-- Action Button -->
-      <div class="d-flex justify-content-between align-items-center">
-        <h1>Details Place</h1>
-        <% if(currentUser && place.author.equals(currentUser._id)) { %>
-        <div class="d-flex gap-2">
-          <a
-            href="/places/<%= place._id %>/edit/"
-            class="btn btn-primary d-flex justify-content-center align-items-center py-2"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-pencil-fill"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"
-              /></svg
-          ></a>
-          <!-- Button trigger modal -->
-          <button
-            type="button"
-            class="btn btn-danger d-flex justify-content-center align-items-center py-2"
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-trash-fill"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0"
-              />
-            </svg>
-          </button>
-          <!-- Modal -->
-          <div
-            class="modal fade"
-            id="exampleModal"
-            tabindex="-1"
-            aria-labelledby="exampleModalLabel"
-            aria-hidden="true"
-          >
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">
-                    Delete Data Permanent
-                  </h5>
-                  <button
-                    type="button"
-                    class="btn-close"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="modal-body">
-                  Apakah anda yakin ingin menghapus data <%= place.title %>?
-                </div>
-                <div class="modal-footer">
-                  <button
-                    type="button"
-                    class="btn btn-secondary"
-                    data-bs-dismiss="modal"
-                  >
-                    Close
-                  </button>
-                  <form
-                    action="/places/<%= place._id %>?_method=DELETE"
-                    method="post"
-                  >
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <% } %>
-      </div>
-      <!-- Content Place -->
-      <ul class="bg-light p-3 rounded mt-1">
-        <li class="mb-3">
-          <span class="fw-bold">Description: </span><%= place.description %>
-        </li>
-        <li class="mb-3">
-          <span class="fw-bold">Location: </span><%= place.location %>
-        </li>
-        <li class="mb-3">
-          <span class="fw-bold">Author: </span>
-          <%= formatUsername(place.author.username) %>
-        </li>
-        <li class="mb-3">
-          <span class="fw-bold">Price: </span>
-          <% if(place.price === 0) { %> <%= 'Gratis' %> <% } else { %> <%=
-          formatRupiah(place.price) %> <% } %>
-        </li>
-      </ul>
-    </div>
-    <div class="col-sm-12 col-md-6 bg-light p-3 rounded mt-2">
-      <div style="width: 100%; height: 100%;" id="mapContainer"></div>
-    </div>
+    <%- include('../layouts/components/detailsContainer') %> <%-
+    include('../layouts/components/mapContainer') %>
+  </div>
 
-    <!-- Jika Tidak ada User -->
-    <% if(!currentUser) { %>
-    <div class="col-sm-12 col-md-6">
+  <!-- Jika Tidak ada User -->
+  <% if(!currentUser) { %>
+  <div class="row mt-5 border-top pt-5">
+    <div class="col-sm-12 col-md-12">
       <%- include('../layouts/components/reviews') %>
     </div>
-    <% } %>
   </div>
+  <% } %>
 
   <!-- Jika Ada User -->
   <% if(currentUser) { %>
@@ -133,29 +29,3 @@
   </div>
   <% } %>
 </div>
-<script>
-  const place = <%- JSON.stringify(place) %>;
-  const coordinates ={
-    lng: place.geometry.coordinates[0],
-    lat: place.geometry.coordinates[1],
-  }
-</script>
-<script>
-  // Initialize the platform object
-  const platform = new H.service.Platform({
-    apikey: "hi8gLZMcMERrG5sktsmbI_6RednnuOV6BqqCg4jl2jw",
-  });
-
-  // Obtain the default map types from the platform object
-  const maptypes = platform.createDefaultLayers();
-
-  // Instantiate (and display) the map
-  const map = new H.Map(
-    document.getElementById("mapContainer"),
-    maptypes.vector.normal.map,
-    {
-      zoom: 10,
-      center: coordinates,
-    }
-  );
-</script>
